less output on test cmd

--- a/circle.yml
+++ b/circle.yml
@@ -4,5 +4,7 @@ machine:
 
 test:
   override:
-    - npm test:
-      timeout: 30
+    - timeout 30s npm run -s test
+
+    # - npm test:
+    #     timeout: 30
